fixed search-icon alignment, recent feed well and padding

--- a/css/my.css
+++ b/css/my.css
@@ -1,12 +1,17 @@
 /* feed-item customization */
-.feed img.media-object {
-    height: 85px;
+.feed img.media-object { 
+    height: 85px; /* eying the size */
     width: 65px;
 }
 
 .feed .search-icon {
-    font-size: 32px;
-    margin-right: 32px;
+    font-size: 32px; /* half the image size */
+    margin-right: 16px; /* 32px / 2 */
+    margin-left: 16px; /* 32px / 2 */
+}
+
+.feed .nav-tabs {
+    margin-bottom: 25px;
 }
 
 /* booklist customization */
